// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScaleColumnHeaderRenderer /> should render correctly 1`] = `
<styled.div
  active={false}
  sortable={true}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <SortIcon
      filterDirection="asc"
      isFiltered={false}
      onClick={[Function]}
    />
    <Flex
      align="center"
      marginLeft="1.25rem"
    >
      Label
      <Styled(styled.div)
        height="14px"
        marginLeft="7px"
      >
        <FilterListIcon
          fill="#002"
          height={14}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </Styled(styled.div)>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;

exports[`<ScaleColumnHeaderRenderer /> should render correctly when disableSort is true 1`] = `
<styled.div
  active={false}
  sortable={false}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <Flex
      align="center"
      marginLeft={false}
    >
      Label
      <Styled(styled.div)
        height="14px"
        marginLeft="7px"
      >
        <FilterListIcon
          fill="#002"
          height={14}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </Styled(styled.div)>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;

exports[`<ScaleColumnHeaderRenderer /> should render correctly when isFiltered is true 1`] = `
<styled.div
  active={false}
  sortable={true}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <SortIcon
      filterDirection="asc"
      isFiltered={false}
      onClick={[Function]}
    />
    <Flex
      align="center"
      marginLeft="1.25rem"
    >
      Label
      <Styled(styled.div)
        height="14px"
        marginLeft="7px"
      >
        <FilterListIcon
          fill="#002"
          height={14}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </Styled(styled.div)>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;

exports[`<ScaleColumnHeaderRenderer /> should render correctly when sort isFiltered is true 1`] = `
<styled.div
  active={false}
  sortable={true}
>
  <Styled(Styled(styled.div))
    position="relative"
  >
    <SortIcon
      filterDirection="asc"
      isFiltered={false}
      onClick={[Function]}
    />
    <Flex
      align="center"
      marginLeft="1.25rem"
    >
      Label
      <Styled(styled.div)
        height="14px"
        marginLeft="7px"
      >
        <FilterListIcon
          fill="#002"
          height={14}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          width={14}
        />
      </Styled(styled.div)>
    </Flex>
  </Styled(Styled(styled.div))>
</styled.div>
`;
